# serializer version: 1
# name: test_button[1][button.bk1600_pause_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.bk1600_pause_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pause Battery',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pause Battery',
    'platform': 'indevolt',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': 'BK1600-12345678_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[1][button.bk1600_pause_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'BK1600 Pause Battery',
    }),
    'context': <ANY>,
    'entity_id': 'button.bk1600_pause_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[2][button.cms_sf2000_pause_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.cms_sf2000_pause_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pause Battery',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pause Battery',
    'platform': 'indevolt',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stop',
    'unique_id': 'SolidFlex2000-87654321_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[2][button.cms_sf2000_pause_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'CMS-SF2000 Pause Battery',
    }),
    'context': <ANY>,
    'entity_id': 'button.cms_sf2000_pause_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
